# hidalgotech

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  INSTALAR-SERVIDOR.md  PROBLEMAS-DEPLOY.md  README.md  SECURITY.md  check-server.sh  crear-zip-deploy.ps1  deploy.ps1  deploy.sh  docker-compose.local.yml  run-local.ps1  setup-server.sh  upload-server.ps1
_template-app/: Dockerfile  docker-compose.yml  requirements.txt
app-costo-unidad/: Dockerfile  docker-compose.yml
app-hashtags/: docker-compose.yml  requirements.txt
app-instagram/: Dockerfile  docker-compose.local.yml  docker-compose.yml  requirements.txt
app-margen/: docker-compose.yml
app-moneda/: docker-compose.yml  requirements.txt
app-nueva/: README.md  docker-compose.yml
app-pinterest/: docker-compose.yml  requirements.txt
app-portal/: docker-compose.yml  requirements.txt
app-qr/: docker-compose.yml  requirements.txt
app-redimensionador/: Dockerfile  docker-compose.yml  requirements.txt
app-roi/: docker-compose.yml
app-tiktok/: Dockerfile  docker-compose.local.yml  docker-compose.yml  requirements.txt
app-transcriber/: Dockerfile  docker-compose.yml  requirements.txt
app-utm/: Dockerfile  docker-compose.yml
portal/: Dockerfile  SECURITY.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_admin.py
portal/app/: auth.py  main.py  security.py
portal/app/dao/: user_dao.py
portal/app/models/: user.py
portal/app/templates/: 403_admin.html  admin.html  ayuda.html  base.html  base_dashboard.html  cuenta.html  dashboard.html  login.html
(+104 files in other folders)
